--- a/index.html
+++ b/index.html
@@ -54,12 +54,15 @@
                         <!-- Projects Dropdown -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="projectsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Projects
+                                Algorithm
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="projectsDropdown">
-                                <li><a class="dropdown-item" href="project-1.html">Project 1</a></li>
-                                <li><a class="dropdown-item" href="project-2.html">Project 2</a></li>
-                                <li><a class="dropdown-item" href="project-3.html">Project 3</a></li>
+                                <li><a class="dropdown-item" href="project-1.html">Working Principle(for non coders)</a></li>
+                                <li><a class="dropdown-item" href="project-2.html">Linking Number Computation(for coders)</a></li>
+                                <li><a class="dropdown-item" href="project-3.html">Interlinked Loops</a></li>
+                                <li><a class="dropdown-item" href="project-3.html">N-component Hopf rings</a></li>
+                                <li><a class="dropdown-item" href="project-3.html">User Manuals</a></li>
+                                <li><a class="dropdown-item" href="project-3.html">Visuals</a></li>
                             </ul>
                         </li>
                         <!-- Contact -->
